# invariant-task-2

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: test.yml
